syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service ActionService {
    rpc GetTrajectory (GetTrajectoryRequest) returns (GetTrajectoryResponse) {
        option (google.api.http) = {
            get: "/api/v1/actions/{vehicle_id}/trajectory"
        };
    };
}

message GetTrajectoryRequest {
    string vehicle_id = 1;
}

message GetTrajectoryResponse {
    repeated Telemetry telemetries = 1;
}
